# bone-collector

./: Cargo.toml  LICENSE  README.md  README_cicd.md
.github/workflows/: release.yaml
assets/models/arm/: arm.gltf
assets/models/bone/: bone.gltf
assets/models/chest/: chest.gltf
assets/models/floor/: floor_material.gltf
assets/models/gate/: gate.glb
assets/models/half/: half_body.gltf
assets/models/hanging_wall_chains/: license.txt  scene.gltf
assets/models/head/: head.gltf  head_with_animation.gltf
assets/models/leg/: leg.gltf
src/: main.rs
src/animations_handler/: mod.rs
src/camera/: mod.rs
src/creatures/: bone_parts.rs  mod.rs  skelly.rs
src/directions/: mod.rs
src/inventory/: mod.rs  ui.rs
src/map/: end_zone.rs  gate.rs  map.txt  mod.rs
src/ui_text/: mod.rs
