[package]
name = "bone-collector"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# see: https://github.com/bevyengine/bevy/issues/5426#issuecomment-1227275839
[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }

[dependencies]
bevy = "0.8"
bevy_rapier3d = { version = "0.16.1", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = "0.12.1"